--- a/package.json
+++ b/package.json
@@ -9,26 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "date-fns": "^2.30.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "eslint-config-prettier": "8.9.0",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "next": "13.4.19",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
+    "@amplitude/analytics-browser": "^2.5.3",
+    "@nextui-org/react": "2.2.9",
+    "date-fns": "2.30.0",
+    "framer-motion": "11.0.8",
+    "next": "14.1.0",
+    "next-themes": "0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "winston": "3.12.0"
   },
   "devDependencies": {
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4"
+    "@types/node": "20.11.24",
+    "@types/react": "18.2.61",
+    "@types/react-dom": "18.2.19",
+    "@typescript-eslint/parser": "7.1.0",
+    "autoprefixer": "^10.0.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jest": "27.9.0",
+    "postcss": "8.4.35",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.12",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   }
 }
