--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "2.2.9",
     "date-fns": "2.30.0",
     "framer-motion": "11.0.8",
+    "joi": "^17.12.2",
     "next": "14.1.0",
     "next-themes": "0.3.0",
     "react": "18.2.0",
@@ -23,8 +24,8 @@
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
-    "@typescript-eslint/parser": "7.2.0",
     "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
     "autoprefixer": "^10.0.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
