--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.5.3",
+    "@calcom/embed-react": "^1.4.0",
     "@nextui-org/react": "2.2.9",
+    "axios": "^1.6.8",
     "date-fns": "2.30.0",
     "framer-motion": "11.0.8",
     "joi": "^17.12.2",
+    "lemonsqueezy.ts": "0.1.7",
     "next": "14.1.0",
     "next-themes": "0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "winston": "3.12.0"
+    "react-native-logs": "5.1.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "20.11.24",
