--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native-logs": "5.1.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "resend": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "20.11.24",
